# image-analogies

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  main.cpp
algo/: feature_vector.cpp  image_analogy.cpp  image_analogy.h  patchmatch.cpp  patchmatch.h
cpp/: CMakeLists.txt  CMakePresets.json  main.cpp
cpp/algo/: feature_vector.cpp  feature_vector.h  image_analogy.cpp  image_analogy.h  level_state.h  patchmatch.cpp  patchmatch.h
cpp/util/: arg_parser.h  gaussian_pyramids.cpp  gaussian_pyramids.h
docs/: Hertzmann_notes.md
python/: .gitignore  algorithm.py  input_processing.py  main.py  pyvenv.cfg
util/: arg_parser.cpp  arg_parser.h  gaussian_pyramids.cpp  gaussian_pyramids.h
